# python-wordsegment

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  versioneer.py
tests/unit/: test_wordsegment.py
wordsegment/: constants.py  wordsegment.py
